--- a/random.html
+++ b/random.html
@@ -11,22 +11,29 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
+
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li>About Me</li>
-				<li>Family</li>
-				<li>Random</li>
-				<li>UMSI</li>
+				<li><a href = "index.html"> About Me</a></li>
+				<li><a href = "personal.html"> Family</a></li>
+				<li><a href = "random.html"> Random</a></li>
+				<li><a href = "http://www.si.umich.edu"> UMSI</a></li>
 			</ul>
+			<h1>Random Page</h1>
 		</nav>
+		
 	</header>
+
+	<main>
+		
+		<p>
+			Make sure you are doing the readings from the <a href="https://www.w3schools.com/html/default.asp"> W3 Schools HTML tutorial</a> as well as the readings from <a href="https://learn.shayhowe.com/html-css/"> Shay Howe's HTML and CSS tutorial</a>
+			Using the Piazza site is another great way to stay on top of your classwork
+		</p>
+	</main>
 	
-	<h2>Random Page</h2>
-
-
-	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
 	<footer>
 		<p>Colleen van Lent copy 2020</p>
