--- a/random.html
+++ b/random.html
@@ -30,10 +30,12 @@
 		
 		<p>
 			Make sure you are doing the readings from the <a href="https://www.w3schools.com/html/default.asp"> W3 Schools HTML tutorial</a> as well as the readings from <a href="https://learn.shayhowe.com/html-css/"> Shay Howe's HTML and CSS tutorial</a>
-			Using the Piazza site is another great way to stay on top of your classwork
 		</p>
+		<p>Using the Piazza site is another great way to stay on top of your classwork</p>
+		
+
 	</main>
-	
+
 
 	<footer>
 		<p>Colleen van Lent copy 2020</p>
